# browzer

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.docker/: docker_commands.txt
.github/workflows/: python-publish.yml  release-sylenium.yml
ci/: requirements.txt
docs/: conf.py  installation.rst  requirements.txt  usage.rst
docs/reference/: browzer.rst  index.rst  sylenium.rst
requirements/: base.txt  testing.txt
src/browzer/: __init__.py  __main__.py  cli.py  constants.py
src/browzer/configuration/: BrowzerConfig.py  browzer_configuration.py  config_loader.py  configuration.py  default_configuration.yaml
src/browzer/constants/: strings.py
src/browzer/core/: browzer.py
src/browzer/exceptions/: exceptions.py
src/browzer/mixins/: simple_repr_mixin.py
src/sylenium/: __init__.py  constants.py  sylenium.py
src/sylenium/command/: clear.py  click.py  command.py  command_invoker.py  find.py  find_all.py  invoker.py  press_enter.py  set_text.py
src/sylenium/concurrency/: __init__.py  driver_monitor_thread.py  driver_thread_local.py
src/sylenium/configuration/: __init__.py  configuration.py
src/sylenium/core/: __init__.py  core.py  session.py  sylenium.py
src/sylenium/driver/: __init__.py  driver_factories.py  driver_factory.py  driver_manager.py  sylenium_driver.py
src/sylenium/element/: __init__.py  locators.py  sylenium_element.py
src/sylenium/elements/: locators.py
src/sylenium/exception/: __init__.py  exceptions.py
src/sylenium/exceptions/: exceptions.py
src/sylenium/helper/: _object_validator.py
src/sylenium/helpers/: _object_validator.py  object_validator.py
src/sylenium/interfaces/: locatable.py
src/sylenium/mixins/: __init__.py  simple_eq_mixin.py
src/sylenium/pages/: pageobjects.py
src/sylenium/plugins/: pytest_sylenium.py
src/sylenium/session/: session.py
src/sylenium/sessions/: session.py
src/sylenium/webdriver/: driver_factories.py
src/sylenium/webelement/: locators.py
tests/: conftest.py  test_browzer.py
tests/helpers/operating_system/: test_environ.py
tests/integration/: conftest.py  test_browser_creation.py  test_chrome_options.py  test_webdriver.py
tests/integration/http_content/: simple_element.html  simple_textarea.html
tests/integration/webdriver/: test_chrome_options.py  test_webdriver.py
tests/integration/webserver/: tcp_server.py
tests/sylenium/integration_tests/: conftest.py  test_webdriver.py
tests/sylenium/unit_tests/: conftest.py
tests/test_files/: cfg_headless_only_true.yaml  custom_config.py  test_configs.py
tests/travis/: travis_configuration.py  travis_configuration.yaml
tests/unit/: conftest.py
tests/unit/configuration/: test_browser_option_validation.py  test_browzer_config_helper.py  test_browzer_configuration.py  test_configuration_obj.py  test_headless_option_validation.py  test_remote_option_validation.py  test_selenium_grid_endpoint_options_validation.py
tests/unit_tests/: conftest.py
tests/unit_tests/commands/: test_commands.py
tests/unit_tests/configuration/: test_configuration_obj.py  test_type_checks.py
(+56 files in other folders)
