[metadata]
name = sylenium
version = 1.0.0
description = Selenium wrapper for stable system testing
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Simon Kerr
author_email = jackofspaces@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Developers, SDET, QA
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = system_tests
project_urls =
    Documentation = https://sylenium.readthedocs.io/
    Changelog = https://sylenium.readthedocs.io/en/latest/changelog.html
    Tracker = https://github.com/symonk/sylenium/issues

[options]
packages =
    sylenium
install_requires =
    selenium>=3.141.0,
    webdriver-manager>=3.2.2,
    pyfields>=1.2.0,
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools>=40.0
    setuptools-scm
zip_safe = no
