[metadata]
name = sylenium
version = 1.0.1
description = Selenium wrapper for stable system testing
author = Simon Kerr
author_email = jackofspaces@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = system_tests
project_urls =
    Documentation = https://sylenium.readthedocs.io/
    Changelog = https://sylenium.readthedocs.io/en/latest/changelog.html
    Tracker = https://github.com/symonk/sylenium/issues

[options]
packages =
    sylenium
    sylenium.configuration
    sylenium.sessions
    sylenium.webelement
    sylenium.webdriver
    sylenium.exceptions
    sylenium.helpers
    sylenium.interfaces
install_requires =
    selenium>=3.141.0
    webdriver-manager>=3.2.2
python_requires = >=3.7
package_dir =
    =src
setup_requires =
    setuptools>=40.0
    setuptools-scm
zip_safe = no


[tool:isort]
force_single_line = True
line_length = 120
known_first_party = sylenium
default_section = THIRDPARTY
forced_separate = tests
not_skip = __init__.py
skip = .tox,.eggs,ci/templates

[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
ignore_errors = True

[flake8]
max-line-length = 140
exclude = .tox,.eggs,ci/templates
